Change ban input to be dropdown, add custom option to still be able to type in custom amount of time, kept maxlength as 3, fix error popup to have a higher z-index than anything

--- a/public/assets/styl/base/elements.styl
+++ b/public/assets/styl/base/elements.styl
@@ -77,7 +77,7 @@ textarea
 	width 31.25rem
 	left 50%
 	top: 50%;
-	z-index 999999
+	z-index 99999999
 	transform translate(-50%, -50%)
 	transform-style preserve-3d
 	backface-visibility hidden
